--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "@babel/generator": "^7.27.0",
     "@babel/parser": "^7.27.0",
     "@babel/plugin-proposal-class-properties": "^7.18.6",
+    "@babel/plugin-syntax-typescript": "^7.25.9",
     "@babel/preset-env": "^7.26.9",
     "@babel/preset-react": "^7.26.3",
     "@babel/traverse": "^7.27.0",
