--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "@babel/plugin-syntax-typescript": "^7.25.9",
     "@babel/preset-env": "^7.26.9",
     "@babel/preset-react": "^7.26.3",
+    "@babel/preset-typescript": "^7.27.0",
     "@babel/traverse": "^7.27.0",
     "babel-project-relative-import": "^2.0.1",
     "lodash": "^4.17.21",
